# magtag-bus-times

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  code.py  pyproject.toml  secrets.example.py
magtag_bus_times/: __init__.py  magtag_weather_example.py  system.py  trips.py  ui.py
