[tool.poetry]
name = "magtag-bus-times"
version = "0.1.0"
description = "An IoT device for showing upcoming bus times"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
